# CORE

./: .gitignore  .markdownlint.json  CHANGELOG.md  CODE_BIBLE.md  CODE_FIXES_2026-01-23.md  CODE_FIXES_2026-01-23.md.bak  CONTAINER_TEST_PLAN.md  CONTRIBUTING.md  CORE-1.code-workspace  CRATE_API_NOTES.md  Cargo.toml  FRONTEND_API_NOTES.md  HELP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PHASES_INDEX.md  PROJECT_MANAGEMENT_COMPLETE_SUMMARY.md  PROJECT_MANAGEMENT_EXTENDED.md  PROJECT_V2_UPGRADE.md  README.md  REFACTORING_PLAN.md  SECURITY.md  START_HERE.md  TEST_RESULTS.md  THIRD_PARTY_LICENSES.md  VFS_EXPAND_ALL_FIX.md  WINDOWS_BUILD.md  index.html  package-lock.json  package.json  tailwind.config.js  test_ad1_v2.sh  test_all_containers.js  test_containers.sh  test_evidence_tree.md  vite.config.ts  vitest.config.ts
crates/ffx-errors/: Cargo.toml
crates/ffx-errors/src/: lib.rs
crates/ffx-l01-writer/: Cargo.toml
crates/ffx-l01-writer/src/: chunks.rs  lib.rs  ltree.rs  sections.rs  types.rs  writer.rs
libewf-ffi/: Cargo.toml  LICENSE  build.rs
libewf-ffi/prebuilt/windows-x64-msvc/: bz2.lib  ewf.lib  zlib.lib
libewf-ffi/src/: error.rs  ffi.rs  lib.rs  reader.rs  stub.c  writer.rs
libewf-ffi/tests/: read_test.rs  write_test.rs
sevenzip-ffi/: .gitignore  Cargo.toml  LICENSE  build.rs
sevenzip-ffi/lzma/: LICENSE
sevenzip-ffi/prebuilt/windows-x64-msvc/: 7z_ffi.lib
sevenzip-ffi/rust/: Cargo.toml  README.md  build.rs  generate_test_report.sh  implementation_summary.sh  performance_test.sh  quick_bench.sh  quick_smart_bench.sh  raw_header.7z  ref_single.7z  run_all_benchmarks.sh  run_all_tests.sh  simple_bench.sh  test_mv_simple.7z
sevenzip-ffi/rust/benches/: compression_benchmarks.rs
sevenzip-ffi/rust/examples/: advanced_features.rs  benchmark.rs  compare_7z.rs  create_mv_test.rs  demo.rs  encryption_example.rs  export_perf.rs  feature_demo.rs  forensic_archiver.rs  forensic_archiver.rs.backup  integration_test.rs  large_file_demo.rs  test_7z_compat.rs  test_formats.rs  test_multivolume.rs  test_mv_verify.rs  test_simple_create.rs  test_single_stream.rs  test_small_mv.rs  test_split_compat.rs
sevenzip-ffi/rust/src/: advanced.rs  archive.rs  error.rs  ffi.rs  lib.rs
sevenzip-ffi/rust/tests/: integration_tests.rs
sevenzip-ffi/src/: advanced.rs  archive.rs  encryption.rs  encryption_native.rs  ffi.rs  stub.c
src-tauri/: 7zip.md  AD1.md  Archive_Reference.md   Cargo.toml  Entitlements.plist  FFX_PROJECT_FORMAT.md  L01.md  PHASE13_OBSERVABILITY.md  PHASE15_MEMORY_PROFILING.md  PHASE16_REGRESSION_TESTING.md  PHASE8_QUICK_REFERENCE.md  PHASE8_SMART_DEDUPLICATION.md  build.rs  ewfHex.md  tauri.acquire.conf.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: cache_benchmarks.rs  hash_benchmarks.rs  regression_benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: bench_hash.rs  bench_verify.rs  bench_viewers.rs  test_7z.rs  test_ad1_tree.rs  test_ad1_v2.rs  test_ad1_verify.rs  test_case_10115.rs  test_e01_read.rs  test_e01_simple.rs  test_e01_v3.rs  test_filesystem.rs  test_parser.rs  test_report.rs  test_viewer.rs  test_zip_list.rs
src-tauri/icons/: icon.icns
src-tauri/icons/FFX_CORE_Full_Logo_and_Icon_Package/: README.txt
src-tauri/src/: README.md  activity_timeline.rs  database.rs  formats.rs  lib.rs  logging.rs  main.rs  menu.rs  project.rs  project_comparison.rs  project_db.rs  project_recovery.rs  project_statistics.rs  project_templates.rs  raw.rs  session_analytics.rs  viewer.rs  workspace_profile_defaults.rs  workspace_profile_types.rs  workspace_profiles.rs
src-tauri/src/ad1/: README.md  enumerate_all.rs  extract_v2.rs  hash_v2.rs  info_v2.rs  mod.rs  operations.rs  operations_v2.rs  parser.rs  reader_v2.rs  test_v2_comprehensive.rs  types.rs  utils.rs  vfs.rs
src-tauri/src/archive/: README.md  detection.rs  extraction.rs  libarchive_backend.rs  mod.rs  rar.rs  segments.rs  sevenz.rs  tar.rs  types.rs  vfs.rs  zip.rs  zip_index.rs
src-tauri/src/commands/: analysis.rs  archive.rs  archive_create.rs  container.rs  database.rs  dedup.rs  deduplication.rs  device.rs  discovery.rs  ewf.rs  ewf_export.rs  ewf_export_types.rs  ewf_helpers.rs  ewf_read.rs  export.rs  hash.rs  index.rs  l01_export.rs  lazy_loading.rs  memory_profiler.rs  mmap_hex.rs  mod.rs  observability.rs  parallel_extract.rs  portable.rs  profiler.rs  project.rs  project_advanced.rs  project_db.rs  project_extended.rs  project_merge.rs  raw.rs  recovery.rs  regression.rs  search.rs  segment_verify.rs  streaming_extract.rs  system.rs  transfer.rs  ufed.rs  (+3 more)
src-tauri/src/common/: README.md  audit.rs  binary.rs  container_detect.rs  datetime.rs  entropy.rs  hash.rs  hash_cache.rs  hash_queue.rs  health.rs  hex.rs  index_cache.rs  index_worker.rs  io_adaptive.rs  io_pool.rs  lazy_loading.rs  magic.rs  memory_profiler.rs  metrics.rs  mod.rs  notifications.rs  path_security.rs  profiler.rs  progress.rs  recovery.rs  regression.rs  retry.rs  segment_hash.rs  segments.rs  tracing_setup.rs  transfer.rs  vfs.rs
src-tauri/src/containers/: ARCHITECTURE.md  README.md  case_documents.rs  companion.rs  impls.rs  mod.rs  operations.rs  scanning.rs  segments.rs  traits.rs  types.rs  unified.rs
src-tauri/src/dedup/: mod.rs  types.rs
src-tauri/src/ewf/: README.md  cache.rs  handle.rs  l01_reader.rs  mod.rs  operations.rs  parser.rs  types.rs  vfs.rs
src-tauri/src/l01_writer/: chunks.rs  ltree.rs  mod.rs  sections.rs  segment.rs  types.rs  writer.rs
src-tauri/src/processed/: README.md  autopsy.rs  axiom.rs  cellebrite.rs  commands.rs  detection.rs  mod.rs  types.rs
src-tauri/src/project/: io.rs  merge.rs  merge_db.rs  merge_query.rs  merge_rebase.rs  (+5 more)
src-tauri/test_output/: test_report.docx  test_report.html  test_report.md  test_report.typ
src-tauri/tests/: archive_create_tests.rs  export_integration_tests.rs  integration_tests.rs  phase11_tests.rs  phase13_tests.rs  phase14_tests.rs  phase15_tests.rs  phase16_tests.rs  test_ad1_v2.rs  test_document_formats.rs  test_libarchive.rs  test_macwd.rs  test_raw_vfs.rs  test_unified_containers.rs
(+1511 files in other folders)
