[workspace]
resolver = "2"
members = [
    "src-tauri",
    "libewf-ffi",
    "sevenzip-ffi",
    "crates/ffx-formats",
    "crates/ffx-l01-writer",
    "crates/ffx-errors",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["CORE-FFX Project Contributors"]
repository = "https://github.com/tmreyno/CORE"

[workspace.dependencies]
# Shared dependencies used by multiple crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
strum = { version = "0.26", features = ["derive"] }
flate2 = { version = "1", features = ["zlib-rs"] }
md-5 = "0.10"
sha1 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = true }
hex = "0.4"

# Internal crates
ffx-formats = { path = "crates/ffx-formats" }
ffx-l01-writer = { path = "crates/ffx-l01-writer" }
ffx-errors = { path = "crates/ffx-errors" }

[patch.crates-io]
libarchive2 = { path = "patches/libarchive2" }
libarchive2-sys = { path = "patches/libarchive2-sys" }
