[package]
name = "core-ffx"
version = "0.1.0"
description = "CORE-FFX - Forensic File Explorer"
authors = ["CORE-FFX Project Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CORE/AD1-tools"

[lib]
name = "ffx_check_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-opener = "2.1"
tauri-plugin-dialog = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"  # Fast binary serialization for ZIP index caching
chrono = { version = "0.4", default-features = true, features = ["serde"] }
filetime = "0.2"
flate2 = { version = "1", features = ["zlib-ng"] }  # Use zlib-ng for faster decompression (streaming is more efficient than libdeflate)
hex = "0.4"
md-5 = "0.10"  # RustCrypto MD5 - better optimized than md5 crate
sha1 = "0.10"  # SHA-1 (asm feature disabled for Windows MSVC compatibility)
sha2 = "0.10"  # SHA-256 (asm feature disabled for Windows MSVC compatibility)
blake3 = { version = "1.5", features = ["rayon", "mmap"] }  # Extremely fast, parallelizable hash with multi-threaded and mmap support
blake2 = "0.10"  # Faster than SHA-2
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }  # Non-crypto but extremely fast
crc32fast = "1.4"
rayon = "1.10"
num_cpus = "1.16"
tokio = { version = "1", features = ["sync"] }  # For Semaphore in async concurrent processing
regex = "1"  # For parsing companion log files
memmap2 = "0.9"  # Memory-mapped I/O for fast file hashing
tracing = "0.1"  # Structured logging/tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Log subscriber with env filter
once_cell = "1.19"  # Lazy static initialization for file data cache
sysinfo = "0.32"  # System info (CPU, memory usage)

# Archive Support via libarchive (BSD-licensed, supports ZIP, 7z, RAR, TAR, etc.)
# Dynamic linking to libarchive - supports password-protected archives
libarchive2 = "0.2"  # Safe Rust bindings for libarchive v3.8.1

# Legacy archive crates (kept for fallback/compatibility)
zip = { version = "2.2", default-features = false, features = ["deflate"] }  # ZIP archive reading for Cellebrite detection
sevenz-rust = "0.6"  # 7-Zip archive support (pure Rust fallback)
tar = "0.4"  # TAR archive support
xz2 = { version = "0.1", features = ["static"] }  # XZ/LZMA decompression (static linking for Windows)
bzip2 = { version = "0.4", features = ["static"] }  # BZ2 decompression (static linking for Windows)
zstd = { version = "0.13", features = ["zstdmt"] }  # Zstandard with multi-threading support
unrar = "0.5"  # RAR archive support (NOTE: requires unrar library on system)

# Filesystem Parsing (for mounting disk images)
ntfs = "0.4"  # NTFS filesystem parsing
fatfs = "0.3"  # FAT12/16/32 filesystem parsing
gpt = "3.1"  # GPT partition table parsing
mbrman = "0.5"  # MBR partition table parsing

# Report Generation
genpdf = { version = "0.2", features = ["images"] }  # PDF generation
docx-rs = "0.4"  # DOCX/Word document generation
tera = "1.20"  # Template engine (Jinja2-like)
quick-xml = { version = "0.37", features = ["serialize"] }  # XML parsing for AXIOM .mcfc files

# Document Reading/Writing (unified)
pdf-extract = "0.7"  # Extract text from PDF files
lopdf = "0.34"  # Low-level PDF parsing for structure analysis

# Image Processing (native Rust)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico", "tiff"] }  # Image reading/writing

# Forensic Viewer Crates
kamadak-exif = "0.5"  # EXIF metadata extraction (camera, GPS, timestamps)
calamine = "0.26"  # Excel/ODS spreadsheet reading (.xlsx, .xls, .ods)
mail-parser = "0.9"  # Email parsing (RFC 5322, .eml files)
tree_magic_mini = "3"  # File type detection via magic bytes
goblin = "0.8"  # Binary executable parsing (PE, ELF, Mach-O)
plist = "1"  # Apple plist parsing (iOS/macOS forensics)
csv = "1.3"  # CSV parsing for large data files

# AI Assistant (optional, feature-gated)
langchain-rust = { version = "4.6", features = ["ollama"], optional = true }
async-openai = { version = "0.29", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }  # For Ollama health check
url = { version = "2.5", optional = true }  # URL parsing for security validation
base64 = "0.22.1"

[features]
default = ["ai-assistant"]  # AI enabled by default for dev
debug-logging = []  # Enable verbose debug logging
ai-assistant = ["langchain-rust", "async-openai", "reqwest", "url"]  # Enable AI-powered report assistance
typst-reports = []  # Enable Typst source file generation (compile with typst CLI)

[dev-dependencies]
tempfile = "3"  # For creating temporary test files

[profile.release]
opt-level = 3           # Maximum optimizations
lto = "thin"            # Link-time optimization (thin is faster to compile than "fat")
codegen-units = 1       # Better optimization at the cost of compile time
strip = true            # Strip symbols
panic = "abort"         # Smaller binary, faster panic

[target.'cfg(windows)'.dependencies]
# Windows-specific optimizations
windows = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_System_IO"] }

# Also optimize dev builds somewhat for better testing performance
[profile.dev]
opt-level = 1           # Some optimization for faster dev testing
