[package]
name = "core-ffx"
version = "0.1.52"
description = "CORE-FFX - Case Organization & Reporting Ecosystem: Forensic File Explorer"
authors = ["CORE-FFX Project Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CORE/AD1-tools"

[lib]
name = "ffx_check_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-opener = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"  # Fast binary serialization for ZIP index caching
chrono = { version = "0.4", default-features = true, features = ["serde"] }
filetime = "0.2"
flate2 = { version = "1", features = ["zlib-rs"] }  # Pure-Rust zlib (no CMake needed; comparable perf to zlib-ng)
hex = "0.4"
md-5 = "0.10"  # RustCrypto MD5 - better optimized than md5 crate
sha1 = "0.10"  # SHA-1 (asm feature disabled for Windows MSVC compatibility)
sha2 = "0.10"  # SHA-256 (asm feature disabled for Windows MSVC compatibility)
blake3 = { version = "1.5", features = ["rayon", "mmap"] }  # Extremely fast, parallelizable hash with multi-threaded and mmap support
blake2 = "0.10"  # Faster than SHA-2
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }  # Non-crypto but extremely fast
crc32fast = "1.4"
rayon = "1.10"
tantivy = { version = "0.22", optional = true }  # Full-text search engine (inverted index, BM25, faceted search, snippets)
tokio = { version = "1", features = ["sync", "time", "rt"] }  # For Semaphore in async concurrent processing + retry logic
regex = "1"  # For parsing companion log files
memmap2 = "0.9"  # Memory-mapped I/O for fast file hashing
tracing = "0.1"  # Structured logging/tracing
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }  # Log subscriber with env filter + JSON output
tracing-appender = "0.2"  # File appender with daily rotation for audit logs
rand = "0.8"  # Random number generation for retry jitter
# NOTE: once_cell replaced with std::sync::LazyLock (Rust 1.80+)

# Error handling & enum utilities
thiserror = "2.0"  # Derive macro for custom error types
strum = { version = "0.26", features = ["derive"] }  # Enum string conversions and iteration

# High-performance concurrency
dashmap = "6.1"  # Lock-free concurrent HashMap
parking_lot = "0.12"  # Faster Mutex/RwLock replacements

# System monitoring
sysinfo = "0.32"  # System info (CPU, memory usage)
privilege = "0.3"  # Cross-platform privilege/elevation detection (is_root / is_admin)

# Profiling and benchmarking
criterion = "0.5"  # Statistical benchmarking (used by benches/hash_benchmarks.rs)

# 7z Archive Support via seven-zip FFI SDK (full LZMA2 + AES-256 encryption)
# Local path dependency - provides compression, split archives, TRUE streaming, multi-threading
# TRUE streaming processes files in 64MB chunks without loading all data into RAM
seven-zip = { path = "../sevenzip-ffi" }

# EWF/E01 Write Support via libewf FFI (forensic image creation)
# Local path dependency - wraps system libewf for E01/L01 forensic container creation
libewf-ffi = { path = "../libewf-ffi" }

# Extracted workspace crates (shared across CORE-FFX and external consumers)
ffx-formats = { workspace = true }
ffx-l01-writer = { workspace = true }
ffx-errors = { workspace = true, features = ["all"] }

# Archive Reading Support (libarchive for multi-format reading)
libarchive2 = "0.2"  # Safe Rust bindings for libarchive v3.8.1 - reading only
sevenz-rust = "0.6"  # 7-Zip reading fallback (pure Rust)
zip = { version = "2.2", default-features = false, features = ["deflate"] }  # ZIP archive reading
tar = "0.4"  # TAR archive reading
unrar = { version = "0.5", optional = true }  # RAR archive reading (requires unrar library; disabled for cross-compilation)
xz2 = { version = "0.1", features = ["static"] }  # XZ/LZMA decompression for .tar.xz
bzip2 = { version = "0.4", features = ["static"] }  # BZ2 decompression for .tar.bz2
zstd = { version = "0.13", features = ["zstdmt"] }  # Zstandard for .tar.zst

# Filesystem Parsing (for mounting disk images)
ntfs = "0.4"  # NTFS filesystem parsing
fatfs = "0.3"  # FAT12/16/32 filesystem parsing
apple-dmg = "0.5"  # DMG (Apple Disk Image) parsing - exposes HFS+ partitions
# NOTE: gpt and mbrman removed - partition parsing done manually via magic bytes

# Report Generation
genpdf = { version = "0.2", features = ["images"], optional = true }  # PDF generation
docx-rs = { version = "0.4", optional = true }  # DOCX/Word document generation
tera = { version = "1.20", optional = true }  # Template engine (Jinja2-like)
quick-xml = { version = "0.37", features = ["serialize"] }  # XML parsing for AXIOM .mcfc files

# Document Reading/Writing (unified)
pdf-extract = { version = "0.7", optional = true }  # Extract text from PDF files
lopdf = { version = "0.34", optional = true }  # Low-level PDF parsing for structure analysis

# Image Processing (native Rust)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico", "tiff"], optional = true }  # Image reading/writing

# Forensic Viewer Crates
kamadak-exif = { version = "0.5", optional = true }  # EXIF metadata extraction (camera, GPS, timestamps)
calamine = { version = "0.26", optional = true }  # Excel/ODS spreadsheet reading (.xlsx, .xls, .ods)
rust_xlsxwriter = { version = "0.93", optional = true }  # Excel .xlsx writing for evidence collection export
cfb = { version = "0.14", optional = true }  # Compound File Binary / OLE2 reading (legacy .doc, .xls, .ppt)
mail-parser = { version = "0.9", optional = true }  # Email parsing (RFC 5322, .eml files)
msg_parser = { version = "0.1", optional = true }  # Outlook .msg email parsing (OLE compound documents)
outlook-pst = { version = "1.1", optional = true }  # PST/OST email archive parsing (pure Rust, read-only)
goblin = { version = "0.8", optional = true }  # Binary executable parsing (PE, ELF, Mach-O)
plist = "1"  # Apple plist parsing (diskutil output, iOS/macOS forensics)
csv = { version = "1.3", optional = true }  # CSV parsing for large data files
notatin = { version = "1.0.1", optional = true }  # Windows Registry hive parsing (forensic-grade, pure Rust)
nom = "7"  # Pinned to 7.x — notatin 1.0.1 specifies ">=6" but is incompatible with nom 8.0 API changes
# NOTE: tree_magic_mini removed - file type detection done via magic bytes in detection module

# AI Assistant (optional, feature-gated)
langchain-rust = { version = "4.6", features = ["ollama"], optional = true }
async-openai = { version = "0.29", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }  # For Ollama health check
url = { version = "2.5", optional = true }  # URL parsing for security validation
base64 = "0.22.1"
tempfile = "3"  # Temp directories for safe WAL-mode database handling during merge

[features]
default = ["full"]

# Build flavors — mutually exclusive top-level targets
full = ["ai-assistant", "unrar", "flavor-review", "flavor-acquire"]  # Everything (default)
acquire = ["flavor-acquire"]               # Acquisition-only (E01/L01/7z creation, hashing, drive ops)
review = ["flavor-review"]                 # Review-only (viewers, reports, search, processed DBs)

# Internal feature groups (not meant to be selected directly)
flavor-acquire = []  # Enables acquisition command surface
flavor-review = [    # Enables review/analysis command surface + heavy deps
  "dep:tantivy",
  "dep:calamine",
  "dep:rust_xlsxwriter",
  "dep:cfb",
  "dep:mail-parser",
  "dep:msg_parser",
  "dep:outlook-pst",
  "dep:goblin",
  "dep:notatin",
  "dep:pdf-extract",
  "dep:lopdf",
  "dep:genpdf",
  "dep:docx-rs",
  "dep:tera",
  "dep:image",
  "dep:kamadak-exif",
  "dep:csv",
]

ai-assistant = ["langchain-rust", "async-openai", "reqwest", "url"]  # Enable AI-powered report assistance
typst-reports = []  # Enable Typst source file generation (compile with typst CLI)

[dev-dependencies]
tempfile = "3"  # For creating temporary test files
uuid = { version = "1.11", features = ["v4"] }  # For generating test operation IDs

[profile.release]
opt-level = 3           # Maximum optimizations
lto = "thin"            # Link-time optimization (thin is faster to compile than "fat")
codegen-units = 1       # Better optimization at the cost of compile time
strip = false           # Must be disabled — stripping removes __TAURI_BUNDLE_TYPE symbol needed by updater
panic = "abort"         # Smaller binary, faster panic

[target.'cfg(windows)'.dependencies]
# NOTE: windows crate removed - not currently used
# Can be re-added for Windows-specific optimizations if needed
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_System_Ioctl", "Win32_System_IO", "Win32_Foundation"] }  # Device I/O for raw disk access

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # POSIX statvfs for disk space checks (unix only)

# Also optimize dev builds somewhat for better testing performance
[profile.dev]
opt-level = 1           # Some optimization for faster dev testing

# Fully optimize ALL dependencies in dev builds — these get cached by sccache
# and never recompile unless their version/features change. This means ~560
# crates compile once (optimized) then are served from cache on every build.
# Only core-ffx itself recompiles at opt-level 1 (fast).
[profile.dev.package."*"]
opt-level = 2           # Optimize all dependencies (cached by sccache)

# Windows patch: fix la_ssize_t (i64) vs isize type mismatch in callback signatures
# and add RelWithDebInfo search path for libarchive2-sys
[patch.crates-io]
libarchive2 = { path = "../patches/libarchive2" }
libarchive2-sys = { path = "../patches/libarchive2-sys" }

[[bench]]
name = "hash_benchmarks"
harness = false
