[package]
name = "ffx-l01-writer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-Rust L01 logical evidence file writer for CORE-FFX"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
